use version.go as a version file for tagpr.
Signed-off-by: fujiwara <fujiwara.shunichiro@gmail.com>

--- a/builder-config.yaml
+++ b/builder-config.yaml
@@ -2,7 +2,7 @@ dist:
   name: sacloud-otel-collector
   description: OpenTelemetry custom collector for sacloud
   output_path: ./cmd/sacloud-otel-collector
-  version: "HEAD"
+  version: __VERSION__
 
 exporters:
   - gomod: go.opentelemetry.io/collector/exporter/debugexporter v0.125.0
