--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,3 +24,4 @@ jobs:
         run: |
             make
             ./sacloud-otel-collector components
+            ./sacloud-otel-collector --version
