--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -40,7 +40,27 @@ nfpms:
     contents:
       - src: ./packaging/config.yaml
         dst: /etc/sacloud-otel-collector/config.yaml
+        type: config
+        file_info:
+          mode: 0640
+          owner: sacloud-otelcol
+          group: sacloud-otelcol
       - src: ./packaging/sacloud-otel-collector.env
         dst: /etc/default/sacloud-otel-collector
+        type: config
+        file_info:
+          mode: 0644
       - src: ./packaging/sacloud-otel-collector.service
         dst: /etc/systemd/system/sacloud-otel-collector.service
+        file_info:
+          mode: 0644
+      - dst: /var/lib/sacloud-otel-collector
+        type: dir
+        file_info:
+          mode: 0755
+          owner: sacloud-otelcol
+          group: sacloud-otelcol
+    scripts:
+      preinstall: ./packaging/preinstall.sh
+      postinstall: ./packaging/postinstall.sh
+      preremove: ./packaging/preremove.sh
