--- a/packaging/config.yaml
+++ b/packaging/config.yaml
@@ -13,6 +13,9 @@ receivers:
           system.cpu.utilization:
             enabled: true
       memory:
+        metrics:
+          system.memory.utilization:
+            enabled: true
       disk:
       filesystem:
         metrics:
@@ -27,7 +30,7 @@ receivers:
     start_at: end
     exclude: []
     include:
-      - /var/log/syslog
+      - /var/log/example.log
 
 processors:
   resourcedetection:
