--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
         with:
-          go-version: "1.24"
+          go-version: "1.25"
         id: go
 
       - name: build
@@ -28,6 +28,8 @@ jobs:
 
       - name: docker build test
         run: |
+          mkdir -p dist/sacloud-otel-collector_linux_amd64
+          cp ./sacloud-otel-collector dist/sacloud-otel-collector_linux_amd64/sacloud-otel-collector
           make docker-load
           docker run --rm ghcr.io/sacloud/sacloud-otel-collector:$VERSION --version
         env:
